--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
             <p id="converted-value"> ₹ 0.00</p>
         </div>
-        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Findia%2520flag%2F&psig=AOvVaw1YXmT6VjhjLD9QeA6qrzmS&ust=1723908732268000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCLiF9Knq-YcDFQAAAAAdAAAAABAE" width="100" height="50">
+        <img src="
+https://images.app.goo.gl/94BNLm943zvrqG656" width="100" height="50">
     </div>
     <script src="javaScript.js"></script>
     
