--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
             <p id="converted-value"> ₹ 0.00</p>
         </div>
-        <img src="
-https://images.app.goo.gl/94BNLm943zvrqG656" width="100" height="50">
+        <img src="https://www.google.com/search?q=indian+flag+images&rlz=1C1GCEJ_enIN1028IN1028&oq=indian+flag+im&gs_lcrp=EgZjaHJvbWUqDQgAEAAYgwEYsQMYgAQyDQgAEAAYgwEYsQMYgAQyBggBEEUYOTIHCAIQABiABDIHCAMQABiABDIJCAQQABgKGIAEMgcIBRAAGIAEMgcIBhAAGIAEMgcIBxAAGIAEMgcICBAAGIAEMgcICRAAGIAE0gEKMjM3NzBqMGoxNagCALACAA&sourceid=chrome&ie=UTF-8#vhid=-W3XiMpS8XcUwM&vssid=l" width="100" height="50">
     </div>
     <script src="javaScript.js"></script>
     
