--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <p id="converted-value"> ₹ 0.00</p>
         </div>
-        <img src="https://cdn.pixabay.com/photo/2022/08/22/12/19/flag-7403565_960_720.png 1x, https://cdn.pixabay.com/photo/2022/08/22/12/19/flag-7403565_1280.png 2x" width="100" height="50">
+        <img src="https://cdn.pixabay.com/photo/2022/08/22/12/19/flag-7403565_1280.png" width="100" height="50">
     </div>
     <script src="javaScript.js"></script>
     
